--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -48,6 +49,7 @@
         android:background="@android:color/transparent"
         android:gravity="top"
         android:hint="@string/hint_tweet_edittext"
+        android:maxLength="140"
         android:paddingBottom="4dp"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
@@ -63,6 +65,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp">
+
+        <TextView
+            android:id="@+id/tvLength"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/btnTweet"
+            tools:text="140" />
 
         <Button
             android:id="@+id/btnTweet"
